fixed whitespace below footer

--- a/style.css
+++ b/style.css
@@ -1,16 +1,38 @@
+* {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
 h1 {
   color: gray;
 }
 
 header {
-  padding: 0;
-  padding-left: 1em;
+  /*padding: 0;
   background-image: url("./images/absurdidad.png") ;
   text-align: center;
+  background-color: lightblue;
+  position: fixed;
+  width: 100%;
+  margin: 0px auto;
+  height: 100px;*/
+}
+
+.headcontent {
+  padding: 0;
+  background-image: url("./images/absurdidad.png") ;
+  text-align: center;
+  background-color: lightblue;
+  position: fixed;
+  width: 100%;
+  margin: 0px auto;
+  height: 100px;
+
 }
 
 body {
- 
+  padding: 0;
   font-family: Tahoma;
   color: #000000;
   font-size: 1em;
@@ -19,6 +41,10 @@ body {
 
 footer {
   text-align: center;
+  background-color: lightblue;
+  margin-bottom: auto;
+  position: inherit;
+  width: 100%;
   
 }
 
@@ -44,12 +70,16 @@ footer {
   padding: 0 60px;
   /*border: 20px solid black;*/
   margin: 5px 0 10px 0;
-  width: 20%;
+  width: 25%;
   display: inline-block;
 }
 
 .bio img{
-  text-align: center;
+  position: absolute;
+  top: 0px;
+  right: 180px;
+  border-radius: 10px;
+  border: 2px solid white;
 }
 
 .bio p{
@@ -67,9 +97,9 @@ footer {
 .section-title {
   color: #3333FF;
   font-size: 2em;
-    font-family: 'Raleway', sans-serif;
-    font-weight: lighter;
-    margin: 15px;
+  font-family: 'Raleway', sans-serif;
+  font-weight: lighter;
+  margin-top: 15px; 
 }
 
 .header-name {
@@ -91,24 +121,29 @@ h2.header-name  {
   font-weight: lighter;
   /*text-align: justify;*/
 }
+
+/*.headcontent {
+  position: fixed;
+}*/
+
 /*****************************************
 NAV
 ******************************************/
 .toplinks {
-    background-image: url("./images/white_carbon.png");
+    /*background-image: url("./images/white_carbon.png");*/
 
-  border-style: solid;
+  /*border-style: solid;
   border-color: black;
   border-radius: 5px;
-  clear: both;
+  clear: both;*/
   display: inline-block;
   text-align: center;
   color: gray;
   font-size: 2em;
   font-family: 'Raleway', sans-serif;
   font-weight: 400l;
-  padding-right: 1em;
-  text-decoration: none;
+  /*padding-right: 1em;*/
+  text-decoration: underline;
 }
 
 #linkcontent {
